Try to fix about-button in dark mode

--- a/src/bulmaConfig.scss
+++ b/src/bulmaConfig.scss
@@ -122,7 +122,13 @@ pre.src {
   }
 }
 
-// mo real estate on phone
+#about-button {
+  @media (prefers-color-scheme: dark) {
+    filter: invert(1);
+  }
+}
+
+// more real estate on phone
 @media only screen and (max-width: $tablet) {
   article,
   .section {
